After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738225 - Fix some build issue while compiling mutter without wayland and native backend support
Fix some build issue while compiling mutter without wayland and native backen...
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-10-09 12:27 UTC by Rico Tzschichholz
Modified: 2014-10-09 18:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
events: Fix build without wayland (906 bytes, patch)
2014-10-09 12:27 UTC, Rico Tzschichholz
committed Details | Review
compositor: Fix argument-type warnings (2.40 KB, patch)
2014-10-09 12:27 UTC, Rico Tzschichholz
none Details | Review
build: Require clutter-egl-1.0 for native backend only (1.17 KB, patch)
2014-10-09 12:27 UTC, Rico Tzschichholz
committed Details | Review

Description Rico Tzschichholz 2014-10-09 12:27:20 UTC
backend support.
Comment 1 Rico Tzschichholz 2014-10-09 12:27:24 UTC
Created attachment 288118 [details] [review]
events: Fix build without wayland
Comment 2 Rico Tzschichholz 2014-10-09 12:27:34 UTC
Created attachment 288119 [details] [review]
compositor: Fix argument-type warnings
Comment 3 Rico Tzschichholz 2014-10-09 12:27:39 UTC
Created attachment 288120 [details] [review]
build: Require clutter-egl-1.0 for native backend only
Comment 4 Rico Tzschichholz 2014-10-09 12:52:24 UTC
Comment on attachment 288119 [details] [review]
compositor: Fix argument-type warnings

Not needed for newer cogl versions after 1.16
Comment 5 Jasper St. Pierre (not reading bugmail) 2014-10-09 17:26:34 UTC
Review of attachment 288118 [details] [review]:

OK.
Comment 6 Jasper St. Pierre (not reading bugmail) 2014-10-09 17:34:42 UTC
Review of attachment 288120 [details] [review]:

I'm fine with this.
Comment 7 Rico Tzschichholz 2014-10-09 18:05:48 UTC
Attachment 288118 [details] pushed as 2deea6e - events: Fix build without wayland
Attachment 288120 [details] pushed as cb084cc - build: Require clutter-egl-1.0 for native backend only