events: Fix build without wayland

https://bugzilla.gnome.org/show_bug.cgi?id=738225